Bug 1105729 - Pre VS2010 SP1 define our own verion of _xgetbv. r=tabraldes, a=sledru